<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:layout_width="298dp"
        android:layout_height="171dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/company_logo_description"
        android:src="@drawable/company_logo" />

    <TextView
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/app_slogan"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_add_task"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/button_add_task"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_view_tasks"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_view_tasks"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/developer_info"
        android:textSize="16sp" />

</LinearLayout>